# OpenUBA

./: .dockerignore  .gitignore  .travis.yml  CODE_OF_CONDUCT.md  DockerfileServer  Home.js  Makefile  README.md  alembic.ini  docker-compose.yml  package-lock.json  requirements.txt  spark_env.sh
alembic/: env.py  script.py.mako
configs/: local.yaml
core/: anomaly.py  api.py  auth.py  case.py  core.py  database.py  dataset.py  dataset_test.py  display.py  display_test.py  encode.py  encode_test.py  entity.py  entity_test.py  fastapi_app.py  hash.py  hash_test.py  model.py  model_test.py  process.py  process_test.py  risk.py  riskmanager.py  rule.py  test.py  user.py  user_test.py  utility.py
docker/: backend.dockerfile  frontend.dockerfile  operator.dockerfile
docs/: ARCHITECTURE.md  DOCKER_BUILD.md  INSTALL.md
interface/: README.md  components.json  next.config.js  package-lock.json  package.json  pnpm-lock.yaml  preload.js  server.js  tailwind.config.js  tsconfig.json
k8s/: backend-deployment.yaml  backend-rbac.yaml  datasets-pv.yaml  dev-pv.yaml  elasticsearch-deployment.yaml  frontend-deployment.yaml  frontend-source-pv.yaml  ingress.yaml  metastore-pv.yaml  namespace.yaml  operator-deployment.yaml  operator-rbac.yaml  postgraphile-deployment.yaml  postgres.yaml  saved-models-pv.yaml  secrets.yaml  source-code-pv.yaml  spark-deployment.yaml
scripts/: build-and-deploy.sh  init_data_ingestion.py  port-forward.sh  reset_db.py  start-dev.sh  test_model_v2.py  verify_connectivity.py
sdk/: README.md  pyproject.toml
sdk/examples/: experiment_tracking.py  pipeline_example.py  quickstart.py
sdk/src/openuba/: __init__.py  cli.py  client.py  context.py  visualization.py
sdk/tests/: __init__.py  test_client.py  test_context.py  test_visualization.py
workspace/: 01_quickstart.ipynb  02_models.ipynb  03_datasets.ipynb  (+7 more)
(+770 files in other folders)
